# gazebo_model_velocity_plugin

./: CMakeLists.txt  README.md  package.xml
include/gazebo_model_velocity_plugin/: gazebo_ros_model_velocity.h  speed_limiter.h
launch/: boxbot.gazebo  boxbot.xacro  boxbot_example.launch
src/: gazebo_ros_model_velocity.cpp  speed_limiter.cpp
