<?xml version="1.0"?>
<package format="2">
  <name>gazebo_model_velocity_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_model_velocity_plugin package offers
    a plugin to move a robot applying velocities to the model
    bypassing the physics engine (useful for robot bases
    with complicated kinematics, or just to get started
    quicker on a new robot model).</description>

  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
